# bridle-tutorials

./: pyproject.toml
cytron-maker-rp2040/source/: conf.py  roles.txt  shortcuts.txt
cytron-maker-rp2040/source/0010-gs/: index.rst
cytron-maker-rp2040/source/0010-gs/0010-hw-components/: index.rst  inventory.rsti
cytron-maker-rp2040/source/0010-gs/0020-hw-setup-uart-console/: assembly.rsti  bom.rsti  doing.rsti  index.rst  yourspace.rsti
cytron-maker-rp2040/source/0010-gs/0030-hw-uf2-upload/: assembly.rsti  bom.rsti  doing.rsti  index.rst  yourspace.rsti
cytron-maker-rp2040/source/0010-gs/0040-fw-gpio-led-btn/: assembly.rsti  bom.rsti  doing.rsti  index.rst
cytron-maker-rp2040/source/0010-gs/0050-hw-setup-usb-console/: assembly.rsti  bom.rsti  doing.rsti  index.rst
cytron-maker-rp2040/source/0020-helloshell/: index.rst
cytron-maker-rp2040/source/0020-helloshell/0010-build-upload/: assembly.rsti  bom.rsti  doing.rsti  index.rst  yourspace.rsti
cytron-maker-rp2040/source/0020-helloshell/0020-cli-help/: assembly.rsti  bom.rsti  doing.rsti  index.rst  yourspace.rsti
cytron-maker-rp2040/source/0020-helloshell/0030-cli-kernel/: assembly.rsti  bom.rsti  doing.rsti  index.rst
cytron-maker-rp2040/source/0020-helloshell/0040-cli-devices/: assembly.rsti  bom.rsti  doing.rsti  index.rst
cytron-maker-rp2040/source/0020-helloshell/0050-cli-gpio/: assembly.rsti  bom.rsti  doing.rsti  index.rst
cytron-maker-rp2040/source/0030-demo/: index.rst
cytron-maker-rp2040/source/0040-dts/: index.rst
cytron-maker-rp2040/source/_dicts/: missing-de
(+79 files in other folders)
