[tool.poetry]
name = "bridle-tutorials"
version = "0.2.0"
description = "Bridle tutorials"
authors = ["TiaC Systems"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
semver = "^3"
gitpython = "^3"
sphinx = "^8"
sphinx-immaterial = "^0"
sphinx-togglebutton = "^0"
rinohtype = "^0"
rinoh-typeface-dejavuserif = "^0"
rinoh-typeface-dejavusans = "^0"
rinoh-typeface-dejavusansmono = "^0"
rinoh-typeface-symbola = "^0"
sphinxcontrib-spelling = "^8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
sphobjinv = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
